- Fix crash in wxAuiToolBar::GetToolBarFits().

wxGTK:

- Fix mouse wheel scrolling in wxListCtrl broken just before 3.0.0.
- Fix memory leak in wxSocket.
- Fix raw access to wxBitmap pixels after drawing on it using wxMemoryDC.
- Fix setting font and colours of wxToggleButtons with images.
- Fix wxPopupTransientWindow mouse events with GTK3,
  also fixes wxOwnerDrawnComboBox, wxDatePickerCtrl.

wxMSW:

- Fix blank wxBitmapComboBox dropdown appearance.
- Fix clicking on checkboxes in wxDataViewCtrl.
- Make "%lu" work with size_t arguments under Win64 (laro).
- Fix wxRegion::Offset() with shared objects (Joost Nieuwenhuijse).
- Fix wxSocket::Initialize() after Shutdown() (Laurent Poujoulat).
- Fix coordinates of EVT_MOUSEWHEEL in frames with toolbars (LtJax).
- Support "show" verb as well as "open" in wxFileType (Eric Jensen).

wxOSX:

- Fix incorrect joystick detection in configure (Lauri Nurmi).


3.0.0: (released 2013-11-11)
----------------------------

All:

- Fix crash if wxCharBuffer fails to allocate the requested amount of memory.

wxGTK:

- Fix wxSpinButton default width under GTK+ 3 (David Hart).

wxMSW:

- Compilation fix for WXWIN_COMPATIBILITY_2_6=1 case (Tim Stahlhut).
- Fix behaviour of wxComboBox using ID=1000.


3.0-RC2: (released 2013-10-28)
------------------------------

All:

- wxTextFile::SaveFile() uses UTF-8 now.
- Add possibility to validate the input files against a schema to wxrc.
- Fix recently broken compilation with Intel compiler.
- Fix reading of files with Mac EOLs in wxTextFile.

All (GUI):

- Fix wxListEvent::GetData() in LLP64 builds.
- Fix special characters handling in wxSVGFileDC::DrawText() (Ludovic Aubert).

wxGTK:

- Fix DrawArc() when printing.

wxMSW:

- Optional better handling of SAFEARRAYs in wxAutomationObject (PB).


3.0-RC1: (released 2013-10-07)
------------------------------

All:

- Adjust dates invalid due to DST consistently under all platforms in wxDateTime.